...
        android:layout_margin="@dimen/text_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_revert" />

    <TextView
        android:id="@+id/profile_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/text_margin"
        android:text="@string/activity_profile_name"
        android:textSize="32sp"
        android:textColor="#ffffff"
        app:layout_constraintBottom_toBottomOf="@id/profile_picture"
        app:layout_constraintStart_toStartOf="parent" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/profile_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/text_margin"
        android:backgroundTint="@color/wht_background"
        android:clickable="true"
        android:src="@drawable/ic_star_border_white_24dp"
...
